finish part on nanoparticles without oxidation

--- a/Sections/2_Theory_Models/Catalysis.tex
+++ b/Sections/2_Theory_Models/Catalysis.tex
@@ -44,8 +44,8 @@ Moreover, if the adsorption is too strong, the product of the reaction is not ab
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhD/Figures/ammonia/ER.png}
-    \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhD/Figures/ammonia/LH.png}
+    \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhD/Figures/ammonia/ER.pdf}
+    \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhD/Figures/ammonia/LH.pdf}
     \caption{
         In the Elley Rideal mechanisms (a) one of the reactants interacts directly from the gas phase with an adsorbed layer of the other reactant, whereas for the Langmuir Hinshelwood mechanism (b) both of the reactants are adsorbed on the catalyst's surface.
         \textcolor{Important}{ADD ARROWS, ENERGY PATH FOR REAGENTS; ETC ...}
