--- a/Sections/2_Theory_Models/X-ray_interaction_matter.tex
+++ b/Sections/2_Theory_Models/X-ray_interaction_matter.tex
@@ -297,7 +297,7 @@ The Thomson scattering length is left apart for simplicity.
 \begin{figure}[!htb]
     \centering
     \includegraphics[height=4cm]{/home/david/Documents/PhDScripts/Drawing/blender/FCC.png}
-    \includegraphics[height=4cm]{/home/david/Documents/PhD/Figures/introduction/PtClean.png}
+    \includegraphics[height=4cm]{/home/david/Documents/PhD/Figures/introduction/PtClean.pdf}
     \caption{
     Face centered cubic (FCC) lattice of Pt (space group 225).
     Atoms are represented as solid balls and situated on the corners and at the middle of the faces.
@@ -376,7 +376,7 @@ From fig. \ref{fig:BraggLaw} we can retrieve the condition to have constructive 
 
 \begin{equation}
     \label{eq:Bragglaw}
-    n\lambda = 2d_{hkl} \sin{\theta}, \quad \ n \in \mathbb{Z}
+    \lambda = 2d_{hkl} \sin{\theta}%, \quad \ n \in \mathbb{Z}
 \end{equation}
 
 In the case of a cubic Bravais lattice, the distance between Miller planes can be written as:
