--- a/Sections/4_Results_SingleCrystals/Introduction.tex
+++ b/Sections/4_Results_SingleCrystals/Introduction.tex
@@ -19,8 +19,8 @@ However, the atoms on the [001] plane still follow a cubic structure whereas the
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhD/Figures/introduction/100.png}
-    \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhD/Figures/introduction/111.png}
+    \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhD/Figures/introduction/100.pdf}
+    \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhD/Figures/introduction/111.pdf}
     \caption{
         Face-centered cubic unit cell of Pt with two [001] crystallographic planes drawn in green at z=0 and z=1 (left).
         The $\vec{a}$, $\vec{b}$, and $\vec{c}$ vectors are used classically to decribe the cubic structure, the $\vec{a}_s$ and $\vec{b}_s$ in-plane vectors separated by \ang{90} and of magnitude \qty{2.78}{\angstrom} can also be used specifically to describe the structure of the [001] planes.
