--- a/references.bib
+++ b/references.bib
@@ -14,6 +14,17 @@ volume = {90},
 year = {2002}
 }
 
+@article{Farrow1993,
+   abstract = {The epitaxial growth of Pt on basal-plane sapphire, i.e. sapphire (0001), by molecular beam epitaxy is described. Growth is monitored in situ using X-ray photoelectron diffraction (XPD), reflection high energy electron diffraction (RHEED) and low energy electron diffraction (LEED). The structural perfection of thin (<250 A) films of Pt is studied using X-ray diffraction and electron microscopy. We find that Pt nucleates on the sapphire surface at 600°Cas islands which are rotationally twinned about the Pt[111] axis. The epitaxial relationship is: Pt[111111A1 203[0001] and Pt(110)11A1203 (1010). Island coalescence occurs at a thickness of 15 A and X-ray diffraction shows that the Pt films have a high structural perfection. Such films are nearly ideal as seed films for a variety of epitaxial magnetic multilayers and alloys.},
+   author = {R F C Farrow and G R Harp and R F Marks and T A Rabedeau and M F Toney and D Weller and S S P Parkin},
+   journal = {Journal of Crystal Growth},
+   pages = {47-58},
+   title = {Epitaxial growth of Pt on basal-plane sapphire: a seed film for artificially layered magnetic metal structures *},
+   volume = {133},
+   year = {1993},
+}
+
+
 @article{WINTERBOTTOM1967,
 title = {Equilibrium shape of a small particle in contact with a foreign substrate},
 journal = {Acta Metallurgica},
@@ -3720,7 +3731,6 @@ year = {2021}
 abstract = {The physical and chemical properties of nanostructures depend on their surface facets. Here, we exploit a pole figure approach to determine the three-dimensional orientation matrix of a nanostructure from a single Bragg reflection measured with a coherent nano-focused X-ray beam. The signature of any truncated (faceted) crystal produces a crystal truncation rod, which corresponds to a streak of intensity in reciprocal space normal to the surface. When two or more non-parallel facets are present, both the crystal orientation and the crystal facets can be identified. This enables facets to be rapidly indexed and uncommon facets, and planar defects, that have been difficult to study before to be identified. We demonstrate the technique with (i) epitaxial core-shell InGaN/GaN multiple quantum-wells grown on GaN nanowires, where surface facets and planar defects are determined, and (ii) single randomly oriented highly faceted tetrahedrahexal Pt nanoparticles. The methodology is applicable to a broad range of nanocrystals and provides a unique insight into the connection between structure and properties of nanomaterials.},
 author = {Richard, Marie Ingrid and Fern{\'{a}}ndez, Sara and Eymery, Jo{\"{e}}l and Hofmann, Jan Philipp and Gao, Lu and Carnis, J{\'{e}}r{\^{o}}me and Labat, St{\'{e}}phane and Favre-Nicolin, Vincent and Hensen, Emiel J.M. and Thomas, Olivier and Sch{\"{u}}lli, Tobias U. and Leake, Steven J.},
 doi = {10.1039/c7nr07990g},
-file = {:home/david/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Richard et al. - 2018 - Crystallographic orientation of facets and planar defects in functional nanostructures elucidated by nano-focuse.pdf:pdf},
 issn = {20403372},
 journal = {Nanoscale},
 number = {10},
