--- a/Sections/3_Results_Nanoparticles/Introduction.tex
+++ b/Sections/3_Results_Nanoparticles/Introduction.tex
@@ -9,7 +9,7 @@ Apart from a presentation of the sources of your data, this chapter allows you t
 
 \section{Introduction}
 
-Bimetallic nanomaterials have raised more and more significant interest from worldwide researchers in recent years, their new physical and chemical properties deriving from synergistic effects between the two metals being highly desirable for catalytic applications \cite{}.
+Bimetallic nanomaterials have raised more and more significant interest from worldwide researchers in recent years, their new physical and chemical properties deriving from synergistic effects between the two metals being highly desirable for catalytic applications.
 For example, bimetallic catalysts consisting either of two noble metals (Pt-Rh, Au-Pd) or a noble and a 3d/4d transition metal (e.g. Pt-Cu) can show tremendously higher catalytic activities and altered selectivity in both conventional thermal and electrochemical catalysis \parencite{Resta2020a, Carnis2021b}.
 
 In the case of the oxidation of ammonia, if Pt catalysts were first used when aiming at the production of \nitricoxide, Pt-Rh catalysts have then proven to be more effective since the 1920s when Rhodium was first added to the catalyst \parencite{Handforth1934, Heck1982}.
@@ -20,22 +20,23 @@ Moreover, changes in the surface relaxation related to the catalyst selectivity 
 Recent studies have shown that nanoparticle surface strain can be controlled, opening up a new path to tune and optimise nanoparticle catalysts \parencite{Zhang2014, Sneed2015, Wang2016}.
 However, these more conventional techniques traditionally provide ensemble-averaged properties when studying nanoparticles.
 With Bragg coherent diffraction imaging (BCDI), we intend to address under \textit{in situ} and \textit{operando} conditions the individual three-dimensional (3D) structural response of an isolated nanoparticle to changes in gas mixtures, enabling us to probe more deeply the details of catalytic phenomena \parencite{Fernandez2019, Passos2020, Dupraz2022}.
-
-In that frame of mind, we aim at investigating in situ the catalytic structure-activity relationships of Pt nanoparticles during the oxidation of ammonia, as a stepping stone to the study of Pt-Rh nanoparticles.
+Specifically, the catalytic structure-activity relationships of Pt nanoparticles will be investigated during the oxidation of ammonia, as a stepping stone to the study of Pt-Rh nanoparticles.
 A careful in situ analysis of the properties of the nanoparticles (size, shape, strain, refaceting, support, interaction, oxide formation, etc) in 3D is of essential importance to gain more understanding of the behaviour of these nanocrystals during a catalytic reaction.
 
 \subsection{Synthetizing platinum nanoparticle}\label{sec:PtParticles}
 
 The platinum nanoparticles were synthetized thanks to a collaboration with the Israel Institute of Technology (Technion) \parencite{Dupraz2017}.
-A 30 nm thick homogeneous layer of platinum is deposited at room temperature on a (100) oriented alumina ($\alpha-$\ce{Al_2O_3}) substrate.
-The Pt nanocrystals have their c-axis oriented along the [111] direction normal to the (0001) sapphire substrate.
-A mask is then applied on the sample and a lithographic process route ensures that the platinum layer transform to nanoparticles that are between 100 and 1000 nm large,  epitaxied on the substrate surface.
-After dewetting and heating at \qty{1100}{\degreeCelsius} for \qty{30}{\minute}, the platinum nanoparticles exhibit a well-faceted shape as seen in various BCDI measurements \parencite{Dupraz2017}.
-\textcolor{Important}{Add more ref with these samples}
-The room temperature lattice parameter of platinum (\qty{3.924}{\angstrom}) is close to that of (100) alumina (\qty{4.122}{\angstrom}) resulting in \qty{\approx 5}{\percent} in-plane lattice strain.\textcolor{Important}{Check}
-The mask yields isolated nanoparticles in the middle of \qty{100}{\um} large squares (fig. \ref{fig:Mask}).
+A 30 nm thick homogeneous layer of platinum is deposited at room temperature on a [001] oriented alumina ($\alpha-$\ce{Al_2O_3}) substrate.
+The Pt nanocrystals have their c-axis oriented along the [111] direction normal to the [001] sapphire substrate.
+A mask is then applied on the sample and a lithographic process route ensures that the platinum layer transforms to nanoparticles that are between 100 and 1000 nm large, epitaxied on the substrate surface.
+The application of a patterned mask during the lithographic process yields a patterned sample with isolated nanoparticles in the middle of \qty{100}{\um} large squares, visible in fig. \ref{fig:Mask}.
+
 The position of the squares is designated with arabic numbers (row), letters (column) and roman numbers (large rectangle).
-The hole diameter in the mask changes in different rectangle and has a direct impact on the nanoparticle size since more matter is deposited.
+All of the position indicators are constituted of platinum nanoparticle as well, which allows the mapping of the sample's surface in Bragg condition to find the nanoparticles' positions (fig. \ref{fig:SampleMapping}).
+The hole diameter in the mask changes in different areas of the sample and has a direct impact on the average nanoparticle size.
+% The epitaxy relation between the nanoparticle and the substrate was explored in this section with in-plane diffraction measurements that show an average in-plane strain of \qty{1}{\percent}.
+After dewetting and heating at \qty{1100}{\degreeCelsius} for \qty{30}{\minute}, the platinum nanoparticles exhibit a well-faceted Winterbottom shape observed in various BCDI measurements \parencite{Dupraz2017}.
+% \textcolor{Important}{Add more ref with these samples, detail better, give good strain value}
 
 \begin{figure}[!htb]
     \centering
@@ -47,79 +48,15 @@ The hole diameter in the mask changes in different rectangle and has a direct im
     \label{fig:Mask}
 \end{figure}
 
-All of the position indicators are constituted of platinum nanoparticle as well, which allows the scanning of the sample's surface in Bragg condition to map an area and find the nanoparticles' positions (fig. \ref{fig:SampleMapping}).
-
-\subsection{Experimental setup for BCDI experiments in the vertical geometry}\label{sec:BCDISetup}
-
-The BCDI experiment was performed at the SixS (Surface Interface X-ray Scattering) beamline of synchrotron SOLEIL, France (sec. \ref{sec:SIXS}).
-As detailed in sec. \ref{sec:Gwaihir}, one of the bottlenecks of the BCDI technique is its slow data reduction and analysis process.
-Moreover, on $3^{rd}$ generation synchrotrons that offer a lower coherent flux (eq. \ref{eq:CoherentFlux}) than $4^{th}$ generation synchrotrons, the measurement time can also be very long.
-At SixS, a rocking curve lasts between \qtyrange{20}{90}{\min} depending on the particle size, the quality of the alignment, the strain of the particle, \textit{etc.}
-Once the raw data is obtained, the particle must be \textit{reconstructed} (sec. \ref{sec:PhaseRetrieval}), and - if of interest - the displacement and strain arrays can be retrieved.
-The analysis workflow can take up to an hour, which totals to an average of two hours from the start of the measurement to the moment when the user has a good idea of the sample shape and structure.
-
-SixS is a beamline that does not only carry out BCDI experiment, but also SXRD experiments, in the same experimental end-station (sec. \ref{sec:MED}).
-When aiming at performing \textit{operando} catalysis experiments, switching from one setup to another can take up to a few days.
-This leaves only a limited remaining amount of time to align the sample, find a suitable nanoparticle, and carry out the experimental plan.
-
-Li \textit{et al.} \parencite*{Li2020}, who have first shown that the SixS beamline could be used to carry out BCDI experiment, also started to work on improving the BCDI measurement process.
-By comparing continuous and step-by-step measurements, they have shown that continous scanning would result in the same data quality while decreasing the measurement dead-time by \qty{30}{\percent}, thereby paving the way for quicker BCDI measurements.
-
-During this thesis, the measurement process was further improved by taking advantage of the new possibility to perform continuous \textit{on-the-fly} scans at SixS, while moving the hexapod holding the sample.
-When using the coherence setup (fig. \ref{fig:OpticalSetup}) in the vertical geometry (fig. \ref{fig:Diffractometer}), the beam is focused on the sample and is about \qty{1}{\um} large vertically, the horizontal footprint depending on the incident angle between the beam and the sample.
-By satisfying Bragg's law in a specular geometry, the incoming angle is set to the Bragg angle $\theta$ (eq. \ref{eq:Bragglaw}).
-The scattered x-rays are then collected by setting the out-of-plane detector angle $\gamma$ at a position $2\theta$ (similar to fig. \ref{fig:EwaldSphereSpecular}).
-Finally, by simultaneously moving the sample with the hexapod and recording the Bragg scattered intensity with the detector, it is possible to map the sample surface with a sub-micron resolution (fig. \ref{fig:SampleMapping}).
-A nanoparticle with a width equal to \qty{300}{\nm} was identified with this technique, which is a good estimate of the spatial resolution that can be attained, limited by the hexapod resolution (\qty{\approx 500}{\nm}) and the beam size.
-
-Both in-plane angles are kept to zero, this is the simplest possible measurement geometry since the nanoparticles on the sample have their c-axis oriented along the [111] direction, parallel to the normal of the sample holder ($\vec{z}$ direction in the laboratory frame).
-
-\begin{figure}[!htb]
-    \centering
-    \includegraphics[height=5cm]{/home/david/Documents/PhD/Figures/sample/microscope_image.png}
-    \includegraphics[height=5cm]{/home/david/Documents/PhD/Figures/sample/microscope_image_photon.png}
-    \caption{
-        Microscope image of the sample seen through the sapphire window of the PEEK dome (left).
-        Map of the sample performed in Bragg condition (right), the high intensity (red) areas correspond to platinum nanoparticles.
-        The letters, numbers and isolated nanoparticles in the centre of squares can be recognized on the sample.
-        \textcolor{Important}{colorbar}
-    }
-    \label{fig:SampleMapping}
-\end{figure}
-
-On the other hand, \textit{Gwaihir} (sec. \ref{sec:Gwaihir}) was developped primarily for the SixS beamline to counter the long analysis process, which allowed a significant reduction in the analysis time from around an hour to a few minutes.
-The following beamtimes profit from the new software by having a more \textit{solution}-driven experimental process.
-Indeed, to be measured, a nanoparticle must be isolated, not too small (weak scattered intensity), not too big (loss of coherence, fringes not visible), and not too initially strained (difficult to obtain a good guess of the support).
-These conditions are sometimes difficult to assert by simply looking at the diffraction pattern.
-Therefore, quick inversion using \textit{Gwaihir} allowed a faster decision process regarding the continuation or not of the nanoparticles measurement.
-
-Successfull measurements by \cite{Lim2021} have permitted the simulatenous use of BCDI measurements from SixS with measurements from other imaging beamlines (ID01 - ESRF, P10 - DESY), designing a robust method to identify defects in the real space with convolutional neural networks (CNN).
-
-In the frame of this thesis, the required beam size was obtained with a Fresnel zone-plate (focal distance of \qty{20}{\cm}), which focused the beam down to \qty{1}{\um} (horizontally) $\times$ \qty{2}{\um} (vertically).
-A coherent portion of the beam was selected with high precision slits by matching their horizontal and vertical gaps with the transverse coherence lengths of the beamline: \qty{20}{\um} (horizontally) and \qty{100}{\um} (vertically).
-\textcolor{Important}{check consistency}
-A circular beam-stop, and a circular order-sorting aperture, were used to block the transmitted beam, and higher diffraction orders, respectively (fig. \ref{fig:OpticalSetup}).
-The sample was mounted in the dedicated XCAT reactor with the substrate surface oriented in the vertical plane on a hexapod mounted vertically on the MED diffractometer (fig. \ref{fig:MEDV}).
-
-The BCDI experiment was performed in a vertical specular geometry at a beam energy of \qty{8.5}{\keV} (wavelength of \qty{1.46}{\angstrom}).
-Three-dimensional (3D) diffraction data were collected with rocking curves of the rotation angle around the normal of the sample, the diffracted beam was recorded with a 2D MAXIPIX photon-counting detector (\numproduct{515 x 515} square pixels, \qtyproduct{55 x 55}{\um} wide) positioned on the detector arm at a distance of \qty{1.22}{\meter}.
-The in-plane ($\omega$) and out-of-plane ($\mu$) angles of the sample were \ang{0} and \ang{18.6}, respectively at \qty{25}{\degreeCelsius}, when the in-plane ($\delta$) and out-of-plane ($\gamma$) angles of the detector were \ang{0} and \ang{37.2}.
-The value of the scattering angle $\mu$ ($\theta$ in eq. \ref{eq:Bragglaw}) and the out-of-plane detector angle ($2\theta$) are expected to vary as a function of the temperature during the experiment due to the thermal expansion of the sample.
-
-The alignement of the beam was performed with the direct beam (all angles at \ang{0}) to ensure that the sample surface is parallel to the direct beam at $\mu=0$ when $\delta = \ang{0}$ and when $\delta = \ang{90}$.
-First, to place the sample in the beam, its position was gradually increased in the direction perpendicular to the sample plane while recording the intensity of the direct beam.
-The sample was then moved to the position at which the intensity of the direct beam was equal to half of its intensity without the sample in the beam path, so that when incresing the incidence angle to \ang{0.3}, the beam covers the entire sample surface.
-Secondly, any possible tilt of the sample surface was corrected by recording the intensity of the \textit{reflected} beam as a function of the $u$ (when $\delta=\ang{0}$) or $v$ (when $\delta=\ang{90}$) angles (fig. \ref{fig:Diffractometer}).
-
 \subsection{Catalysis reactor calibration}
 
-The catalytic activity of the platinum nanoparticles as a function of the temperature was studied to make certain that the nanoparticles were sufficently catalytically active for the reaction products to be detected by the mass spectrometer.
-The catalytic activity of the reactor without any sample was also monitored and proven to be nul (sec. \ref{sec:SXRD100}), to make certain that no reaction occurs without the sample.
+The catalytic activity of the platinum nanoparticles as a function of the temperature was studied to be certain that the sample is sufficently catalytically active for the reaction products to be detected by the mass spectrometer.
+The catalytic activity of the reactor without any sample was also monitored and proven to be nul (sec. \ref{sec:SXRD100}), to make sure that no reaction occurs without the sample.
 
-The heater temperature was first calibrated by measuring the temperature in the reactor at different atmospheres, as a function of the current intensity (fig. \ref{fig:TempRamps} - a).
-The experimental data points were then fit using a polynomial of degree four to set the reactor to any temperature from \qtyrange{0}{600}{\degreeCelsius} (fig. \ref{fig:TempRamps} - b) when working under vacuum or at ambient pressure (\qty{0.3}{\bar} or \qty{0.5}{\bar} of \argon).
-The thermal conductivity of the gases involved in the oxidation of ammonia is in the similar order of magnitude (tab. \ref{tab:ThermalConductivity}).
-Moreover, the same gas - Argon - is used as a carrier gas during the experiments, constituting at least \qty{80}{\percent} of the gas flow, and allowing us to assume that the temperature in the reaction chamber is well approximated.
+The heater temperature was first calibrated by measuring the temperature in the reactor at different pressures, as a function of the current intensity (fig. \ref{fig:TempRamps} - a).
+The experimental data points were then fit using a polynomial of degree four to set the reactor to any temperature from \qtyrange{25}{600}{\degreeCelsius} (fig. \ref{fig:TempRamps} - b) when working under vacuum or at ambient pressure (\qty{0.3}{\bar} or \qty{0.5}{\bar} of \argon).
+The thermal conductivity of the gases involved in the oxidation of ammonia are in the similar order of magnitude (tab. \ref{tab:ThermalConductivity}).
+Moreover, the same inert gas used to set the reactor pressure - Argon - is used as a carrier gas during the experiments, constituting at least \qty{80}{\percent} of the gas flow, and allowing us to assume that the temperature in the reaction chamber is well approximated.
 
 \begin{table}[!htb]
 \centering
@@ -137,7 +74,7 @@ Moreover, the same gas - Argon - is used as a carrier gas during the experiments
 \label{tab:ThermalConductivity}
 \end{table}
 
-Two temperature ramps at a reactor pressure of \qty{0.3}{\bar} (fig. \ref{fig:TempRamps} - c, d) were carried out to probe the evolution of the reaction product as a function of the temperature under a constant gas flow (\qty{41}{\ml\per\min} of \argon, \qty{8}{\ml\per\min} of \dioxygen, \qty{1}{\ml\per\min} of \ammonia).
+Two temperature ramps at a reactor pressure of \qty{0.3}{\bar} (fig. \ref{fig:TempRamps} - c, d) were carried out to probe the evolution of the reaction products as a function of the temperature under reacting conditions, \textit{i.e.} a constant gas flow of \qty{41}{\ml\per\min} of \argon, \qty{8}{\ml\per\min} of \dioxygen, and \qty{1}{\ml\per\min} of \ammonia.
 The excess of oxygen compared to ammonia is expected to favour the production of \nitricoxide at high temperatures (sec. \ref{sec:AmoOxiHC}).
 
 \begin{figure}[!htb]
@@ -155,8 +92,9 @@ The excess of oxygen compared to ammonia is expected to favour the production of
     \label{fig:TempRamps}
 \end{figure}
 
-The first temperature ramp to \qty{525}{\degreeCelsius} shows that the air present in the cell was not well extracted before reaching a temperature of \qty{300}{\degreeCelsius} \qty{14}{\min} after starting heating, the pressure of \nitrogen and \water continuously decreasing until then.
-Above \qty{300}{\degreeCelsius}, the pressure of \nitrogen and \nitricoxide starts to increase, with a sligtly lower activation temperature for \nitrogen.
+The first temperature ramp to \qty{525}{\degreeCelsius} shows that the air present in the cell was not well extracted before reaching a temperature of \qty{300}{\degreeCelsius}, \qty{14}{\min} after starting heating.
+The pressure of \nitrogen and \water continuously decreasing until then.
+Above \qty{300}{\degreeCelsius}, the pressure of \nitrogen and \nitricoxide start to increase, with a slightly lower activation temperature for \nitrogen.
 No production of \nitrousoxide can be detected during this temperature ramp.
 
 A second temperature ramp was carried out to \qty{650}{\degreeCelsius} to see if the the activation temperature for the production of \nitrousoxide could be achieved.
@@ -164,7 +102,7 @@ The partial pressure of each reaction product is lower at the beginning of the t
 The activation temperature for the production of \nitrogen can be more easily identified to be around \qty{300}{\degreeCelsius} and near \qty{450}{\degreeCelsius} for \nitricoxide, which is in accord with the data from the first temperature ramp.
 
 However, the activation temperature for \nitrousoxide in the second temperature ramp is at about \qty{450}{\degreeCelsius}, a temperature that was reached during the first temperature ramp as well, but without the detection of \nitrousoxide.
-This could be linked to either an activation process of the catalyst that lowers the activation temperature for the production of nitrous oxide, or more probably to a very low signal to noise ratio that hides the evolution of the partial pressure due to the remaining air in the reactor, the partial pressure on \nitrousoxide being the lowest of all the detected gases.
+This could be linked to either an activation process of the catalyst during the first temperature ramp that lowers the activation temperature for the production of nitrous oxide in the second temperature ramp, or more probably to a very low signal to noise ratio that hides the evolution of the partial pressure due to the remaining air in the reactor, the partial pressure on \nitrousoxide being the lowest of all the detected gases.
 
 According to these primary results, the study of the oxidation of ammonia with BCDI was originally decided to be carried out at \qtylist{300;500;600}{\degreeCelsius}, temperatures before and after the catalyst light off (tab. \ref{tab:Conditions}).
 
